fixing spacing in signup form

--- a/client/src/components/signupForm/signup.styles.css
+++ b/client/src/components/signupForm/signup.styles.css
@@ -16,3 +16,7 @@
 .radio-holder :where(label, input) {
   cursor: pointer;
 }
+
+input[type="radio"] {
+  margin-right: 5px;
+}
