--- a/client/src/pages/authPage/auth-page.styles.css
+++ b/client/src/pages/authPage/auth-page.styles.css
@@ -97,8 +97,9 @@ form {
   margin: 10px auto;
 }
 
-form h1 {
-  margin-top: -10px;
+.signup p,
+.login p {
+  font-size: 12px;
 }
 
 @media(max-width:767px) {
@@ -111,13 +112,13 @@ form h1 {
     width: 100%
   }
 
-  .signup p,
-  .login p {
-    font-size: 11px;
-  }
 
   .container h1 {
     font-size: 27px;
+  }
+
+  .signup form h1 {
+    margin-top: -28px;
   }
 
   .container .login {
@@ -155,7 +156,7 @@ form h1 {
 }
 
 .signup .switch-form {
-  bottom: 10px;
+  bottom: 24px;
 }
 
 .login button.switch,
